--- a/TryAccountingNote20210730/TryAccountingNote20210730.csproj
+++ b/TryAccountingNote20210730/TryAccountingNote20210730.csproj
@@ -119,6 +119,13 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="SystemAdmin\SystemAdmin.Master.cs">
+      <DependentUpon>SystemAdmin.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SystemAdmin\SystemAdmin.Master.designer.cs">
+      <DependentUpon>SystemAdmin.Master</DependentUpon>
+    </Compile>
     <Compile Include="SystemAdmin\UserDetail.aspx.cs">
       <DependentUpon>UserDetail.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -150,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="SystemAdmin\SystemAdmin.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
